mdapi/Custom/objects/Modification__c.object
<CustomObject>
    <description>This is used in our internal system change control process. (Relates to System Issue Report object.)</description>
    <fields>
        <fullName>Apex_Script__c</fullName>
        <inlineHelpText>Anonymous Apex scripts go here--use comments for special instructions, please</inlineHelpText>
        <label>Apex Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_in_Prod__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field when a &quot;Manual&quot; Modification (or any others that should be tracked) is completed in Production.</inlineHelpText>
        <label>Completed in Prod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_in_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this field to check off development in a sandbox for pre-existing Modifications.</inlineHelpText>
        <label>Completed in UAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_in_TDEV_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed in TDEV Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Label__c</fullName>
        <label>Component Label</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <inlineHelpText>API Name</inlineHelpText>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytic Snapshot</fullName>
                </value>
                <value>
                    <fullName>Anonymous Apex Script</fullName>
                </value>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
                <value>
                    <fullName>Apex Trigger</fullName>
                </value>
                <value>
                    <fullName>Assignment Rule</fullName>
                </value>
                <value>
                    <fullName>Auth. Provider</fullName>
                </value>
                <value>
                    <fullName>Auto Response Rule</fullName>
                </value>
                <value>
                    <fullName>CLI Script</fullName>
                </value>
                <value>
                    <fullName>Custom Application</fullName>
                </value>
                <value>
                    <fullName>Custom Label</fullName>
                </value>
                <value>
                    <fullName>Custom Setting</fullName>
                </value>
                <value>
                    <fullName>Custom Tab</fullName>
                </value>
                <value>
                    <fullName>Data Load</fullName>
                </value>
                <value>
                    <fullName>Escalation Rule</fullName>
                </value>
                <value>
                    <fullName>Folder</fullName>
                </value>
                <value>
                    <fullName>Folder Item: Dashboard</fullName>
                </value>
                <value>
                    <fullName>Folder Item: Document</fullName>
                </value>
                <value>
                    <fullName>Folder Item: Email Template</fullName>
                </value>
                <value>
                    <fullName>Folder Item: Report</fullName>
                </value>
                <value>
                    <fullName>Home Page Component</fullName>
                </value>
                <value>
                    <fullName>Home Page Layout</fullName>
                </value>
                <value>
                    <fullName>Home Page Web Links</fullName>
                </value>
                <value>
                    <fullName>Intranet Content</fullName>
                </value>
                <value>
                    <fullName>Object: Action Override</fullName>
                </value>
                <value>
                    <fullName>Object: Approval Process</fullName>
                </value>
                <value>
                    <fullName>Object: Business Process</fullName>
                </value>
                <value>
                    <fullName>Object: Buttons/Links</fullName>
                </value>
                <value>
                    <fullName>Object: Entire Object</fullName>
                </value>
                <value>
                    <fullName>Object: Field</fullName>
                </value>
                <value>
                    <fullName>Object: Field Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This field may be left empty unless instructions are necessary for deployment of this modification.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Since_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is for quickly identifying Modifications that were added after the rest of them were deployed.</inlineHelpText>
        <label>New Since Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Object</fullName>
                </value>
                <value>
                    <fullName>AppExchange Package</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Users</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Deployment_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post-Deployment Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Deployment_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this field to flag items that must be done prior to migrating anything, such as setting up queues, creating record types, page layouts, report/dashboard folders, etc.</inlineHelpText>
        <label>Pre-Deployment Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIR_Rollout__c</fullName>
        <formula>System_Issue_Report__r.Actual_Rollout__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIR Rollout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIR_Status__c</fullName>
        <formula>TEXT(System_Issue_Report__r.Status__c)</formula>
        <label>SIR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIR_Targeted_Rollout__c</fullName>
        <formula>System_Issue_Report__r.Rollout__r.Name</formula>
        <label>SIR Targeted Rollout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>This optional field only needs to be filled in if there is a required sequence for Deployment of modifications.  Otherwise it can be left empty.</inlineHelpText>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Issue_Report__c</fullName>
        <label>System Issue Report</label>
        <referenceTo>Issues_New_Feature_Request__c</referenceTo>
        <relationshipLabel>Modifications</relationshipLabel>
        <relationshipName>Modifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_Of_Modification__c</fullName>
        <label>Type Of Modification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Modification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>System_Issue_Report__c</columns>
        <columns>NAME</columns>
        <columns>Type_Of_Modification__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Manual_Step__c</columns>
        <columns>Object__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Component_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Deploy_To_TDEV4</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Manual_Step__c</columns>
        <columns>Type_Of_Modification__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Component_Name__c</columns>
        <columns>System_Issue_Report__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SIR_Targeted_Rollout__c</field>
            <operation>equals</operation>
            <value>2013 Jul 22</value>
        </filters>
        <filters>
            <field>SIR_Status__c</field>
            <operation>notEqual</operation>
            <value>Ready for QA Review</value>
        </filters>
        <label>Deploy to TDEV4 for Customer Portal</label>
    </listViews>
    <listViews>
        <fullName>Manual_Step_Modifications</fullName>
        <columns>NAME</columns>
        <columns>Manual_Step__c</columns>
        <columns>Type_Of_Modification__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Apex_Script__c</columns>
        <columns>System_Issue_Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manual_Step__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manual Step Modifications</label>
    </listViews>
    <listViews>
        <fullName>x2013_Apr_10_Rollout</fullName>
        <columns>System_Issue_Report__c</columns>
        <columns>Type_Of_Modification__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Manual_Step__c</columns>
        <columns>SIR_Rollout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SIR_Targeted_Rollout__c</field>
            <operation>equals</operation>
            <value>2013 Apr 10</value>
        </filters>
        <filters>
            <field>SIR_Status__c</field>
            <operation>equals</operation>
            <value>Ready to Deploy in PROD</value>
        </filters>
        <label>2013 Apr 10 Rollout</label>
    </listViews>
    <listViews>
        <fullName>x2013_Feb_8_Rollout</fullName>
        <columns>System_Issue_Report__c</columns>
        <columns>Type_Of_Modification__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Manual_Step__c</columns>
        <columns>SIR_Rollout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SIR_Rollout__c</field>
            <operation>equals</operation>
            <value>2013 Feb 8</value>
        </filters>
        <label>2013 Feb 8 Rollout</label>
    </listViews>
    <listViews>
        <fullName>x2013_Feb_9_Rollout</fullName>
        <columns>System_Issue_Report__c</columns>
        <columns>Type_Of_Modification__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Manual_Step__c</columns>
        <columns>SIR_Rollout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SIR_Rollout__c</field>
            <operation>equals</operation>
            <value>2013 Feb 9</value>
        </filters>
        <filters>
            <field>SIR_Status__c</field>
            <operation>equals</operation>
            <value>Ready to Deploy in PROD</value>
        </filters>
        <label>2013 Feb 9 Rollout</label>
    </listViews>
    <listViews>
        <fullName>x2014_Mar_02_Rollout</fullName>
        <booleanFilter>1 AND ( 2 OR 3 OR  4 OR  5)</booleanFilter>
        <columns>NAME</columns>
        <columns>System_Issue_Report__c</columns>
        <columns>Type_Of_Modification__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Sequence__c</columns>
        <columns>Manual_Step__c</columns>
        <columns>SIR_Rollout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SIR_Targeted_Rollout__c</field>
            <operation>equals</operation>
            <value>2014 Mar 2</value>
        </filters>
        <filters>
            <field>SIR_Status__c</field>
            <operation>equals</operation>
            <value>Needs Smoketest in UAT</value>
        </filters>
        <filters>
            <field>SIR_Status__c</field>
            <operation>equals</operation>
            <value>Ready for UAT Review</value>
        </filters>
        <filters>
            <field>SIR_Status__c</field>
            <operation>equals</operation>
            <value>Ready to Deploy in PROD</value>
        </filters>
        <filters>
            <field>SIR_Status__c</field>
            <operation>equals</operation>
            <value>Ready for Prod Review</value>
        </filters>
        <label>2014 Mar 02 Rollout</label>
    </listViews>
    <listViews>
        <fullName>x2014_Sep_14_Rollout</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>System_Issue_Report__c</columns>
        <columns>Type_Of_Modification__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Manual_Step__c</columns>
        <columns>SIR_Rollout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SIR_Status__c</field>
            <operation>equals</operation>
            <value>Ready to Deploy in PROD</value>
        </filters>
        <filters>
            <field>Manual_Step__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Component_Name__c</field>
            <operation>equals</operation>
            <value>Custom Setting Script</value>
        </filters>
        <filters>
            <field>Component_Type__c</field>
            <operation>notEqual</operation>
            <value>Sharing Setting</value>
        </filters>
        <label>2013 Sep 14 Rollout</label>
    </listViews>
    <listViews>
        <fullName>x5_1_14_Rollout</fullName>
        <columns>NAME</columns>
        <columns>System_Issue_Report__c</columns>
        <columns>Type_Of_Modification__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Sequence__c</columns>
        <columns>Manual_Step__c</columns>
        <columns>SIR_Rollout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SIR_Targeted_Rollout__c</field>
            <operation>equals</operation>
            <value>5.1.14</value>
        </filters>
        <label>5.1.14 Rollout</label>
    </listViews>
    <nameField>
        <displayFormat>MN-{0000000}</displayFormat>
        <label>Modification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>